removed hibernate deprecations